[project]
requires-python = ">=3.6"

[tool.cibuildwheel]
# # Install pytest before running CIBW_TEST_COMMAND
# test-requires = "pytest"
# # Run the project tests against the installed wheel using `nose`
# test-command = "python -m pytest --pyargs -v labgraph --ignore=labgraph/devices --ignore=labgraph/runners"

# Increase pip debugging output
build-verbosity = 2
build = ["cp36-*", "cp37-*", "cp38-*", "cp39-*"]
skip = ["pp*", "*-win32", "cp310-*", "*_arm64", "*_universal2", "*_i686", "*musllinux*", "*_aarch64", "*_ppc64le", "*_s390x"]
manylinux-x86_64-image = "pperanich/manylinux2014_x86_64_pic:latest"
# manylinux-i686-image= "pperanich/manylinux2014_i686_pic:latest"

[tool.cibuildwheel.linux]
# Run a script that's inside your project
before-all = "bash scripts/prepare_for_build_linux.sh"

[tool.cibuildwheel.macos]
# Run a script that's inside your project
before-all = "bash scripts/prepare_for_build_macos.sh"
environment = {MACOSX_DEPLOYMENT_TARGET="10.15"}

[tool.cibuildwheel.windows]
# Run a script that's inside your project
before-all = "powershell scripts/prepare_for_build_windows.bat"
